# UGEngine

./: CMakeLists.txt
UGEngine/: CMakeLists.txt
UGEngine/include/UGEngine/Core/: DestructionListener.hpp  DestructionTrigger.hpp  DestructionTrigger.ipp  NonCopyable.hpp  Type.hpp  TypeDefinition.hpp  TypeInfo.hpp  Vector2.hpp  Vector3.hpp
UGEngine/include/UGEngine/Entity/Component/: Fear.hpp  Health.hpp  Health.ipp  Hunger.hpp  Hunger.ipp  Tracker2.hpp  Tracker3.hpp
UGEngine/include/UGEngine/Entity/Core/: Broadcaster.hpp  Broadcaster.ipp  Component.hpp  Component.ipp  ComponentImpl.hpp  (+6 more)
UGEngine/include/UGEngine/EntityComponents/: Component.hpp  Component.ipp  Entity.hpp  Entity.ipp  EntitySpecialisedMessage.hpp  EntitySpecialisedMessage.ipp  MessageHandler.hpp  MessageHandler.ipp  XmlEntityProvider.hpp
UGEngine/include/UGEngine/ExempleComponents/: HealthComponent.hpp
UGEngine/include/UGEngine/Message/: MessageHandler.hpp  MessageSender.hpp  MessageSender.ipp  MessageSenderImpl.hpp  MessageSenderImpl.ipp
UGEngine/include/UGEngine/MessageComponents/: DamageMessage.hpp  DieMessage.hpp
UGEngine/src/Core/: DestructionTrigger.cpp
UGEngine/src/Entity/Component/: Health.cpp  Tracker2.cpp  Tracker3.cpp
UGEngine/src/Entity/Core/: Component.cpp  Entity.cpp
UGEngine/src/Entity/Message/: Damage.cpp  Die.cpp  Heal.cpp  PathQueryPosition2.hpp  Position2.hpp  Update.cpp
UGEngine/src/EntityComponents/: Component.cpp  Entity.cpp
UGEngine/src/ExempleComponents/: HealthComponent.cpp
UGEngine/src/MessageComponents/: DamageMessage.cpp  DieMessage.cpp  HealMessage.cpp
(+16 files in other folders)
